src/objects/WeeklyRollupEntry__c.object
<CustomObject>
    <fields>
        <fullName>AcctBurdenedCost__c</fullName>
        <label>Acct Burdened Cost</label>
        <summarizedField>EarnedValueSnapshot__c.AcctBurdenedCost__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctRawCost__c</fullName>
        <label>Acct Raw Cost</label>
        <summarizedField>EarnedValueSnapshot__c.AcctRawCost__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AppliedAcctBurdenedCost__c</fullName>
        <formula>BLANKVALUE(OverrideAcctBurdenedCost__c, AcctBurdenedCost__c)</formula>
        <label>Applied Acct Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedAcctRawCost__c</fullName>
        <formula>BLANKVALUE(OverrideAcctRawCost__c, AcctRawCost__c)</formula>
        <label>Applied Acct Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedApprovedCost__c</fullName>
        <formula>BLANKVALUE( OverrideApprovedCost__c ,  ApprovedCost__c )</formula>
        <label>Applied Approved Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedEstimatedCost__c</fullName>
        <formula>BLANKVALUE( OverrideEstimatedCost__c , EstimatedCost__c )</formula>
        <label>Applied Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedRevenue__c</fullName>
        <formula>BLANKVALUE(OverrideRevenue__c, Revenue__c)</formula>
        <label>Applied Cash In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedCost__c</fullName>
        <label>Approved Cost</label>
        <summarizedField>EarnedValueSnapshot__c.ThisWeekAmount__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPI__c</fullName>
        <formula>IF( AppliedAcctBurdenedCost__c != 0, EarnedValue__c / AppliedAcctBurdenedCost__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EarnedValue__c</fullName>
        <label>Earned Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedCost__c</fullName>
        <label>Estimated Cost</label>
        <summarizedField>EarnedValueSnapshot__c.ThisWeekAmountEst__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FiscalMonth__c</fullName>
        <description>The name of the fiscal month, following the naming convention: FY2015-01, FY2015-02, ..., FY2015-12, etc.</description>
        <inlineHelpText>The name of the fiscal month, following the naming convention: FY2015-01, FY2015-02, ..., FY2015-12, etc.</inlineHelpText>
        <label>Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideAcctBurdenedCost__c</fullName>
        <label>Override Acct Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideAcctRawCost__c</fullName>
        <label>Override Acct Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideApprovedCost__c</fullName>
        <label>Override Approved Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideEstimatedCost__c</fullName>
        <label>Override Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideRevenue__c</fullName>
        <label>Override Cash In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodStartDate__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <formula>Period__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Weekly Rollup Entries</relationshipLabel>
        <relationshipName>Weekly_Rollup_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalBurdenedCost__c</fullName>
        <label>Project Functional Burdened Cost</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalBurdenedCost__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLFringe__c</fullName>
        <label>ProjectFunctionalRawCostPLFringe</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostPLFringe__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLLabor__c</fullName>
        <label>ProjectFunctionalRawCostPLLabor</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostPLLabor__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLODCEXPS__c</fullName>
        <label>ProjectFunctionalRawCostPLODCEXPS</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostPLODCEXPS__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLODCSUBS__c</fullName>
        <label>ProjectFunctionalRawCostPLODCSUBS</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostPLODCSUBS__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLOverhead__c</fullName>
        <label>ProjectFunctionalRawCostPLOverhead</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostPLOverhead__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostResourceLabor__c</fullName>
        <label>ProjectFunctionalRawCostResourceLabor</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostResourceLabor__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostResourceNonLabor__c</fullName>
        <label>ProjectFunctionalRawCostResourceNonLabor</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCostResourceNonLabor__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCost__c</fullName>
        <label>Project Functional Raw Cost</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectFunctionalRawCost__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectHours__c</fullName>
        <label>ProjectHours</label>
        <summarizedField>EarnedValueSnapshot__c.ProjectHours__c</summarizedField>
        <summaryForeignKey>EarnedValueSnapshot__c.WeeklyRollupEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Weekly Rollup Entries</relationshipLabel>
        <relationshipName>Weekly_Rollup_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Cash In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPI__c</fullName>
        <formula>IF(AppliedApprovedCost__c != 0, EarnedValue__c / AppliedApprovedCost__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Rollup Entry</label>
    <nameField>
        <displayFormat>WRE-{0000000}</displayFormat>
        <label>Weekly Rollup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Rollup Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>